--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Atlas <span>  Africa</span> Car</a>
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo navbar-logo  mr-2">
+            <span class="navbar-brand">
+              <span class="brand-black">Atlas</span>
+              <span class="brand-accent">Africa</span>
+              <span class="brand-black">Car</span>
+              <span class="brand-accent">Service</span>
+            </span>
+        </a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -105,7 +113,7 @@
 	  					</div>
 	  					<div class="col-md-8 d-flex align-items-center">
 	  						<div class="services-wrap rounded-right w-100">
-	  							<h3 class="heading-section mb-4">Better Way to Rent Your Perfect Cars</h3>
+	  							<h3 class="heading-section mb-4">Bien plus qu’une location, une expérience</h3>
 	  							<div class="row d-flex mb-4">
 					          <div class="col-md-4 d-flex align-self-stretch ftco-animate">
 					            <div class="services w-100 text-center">
@@ -403,7 +411,9 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Atlas  <span>Africa </span> Car</a></h2>
+              <h2 class="ftco-heading-2"><a href="#" class="logo">
+                <img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo footer-logo">
+              </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
