--- a/pricing.html
+++ b/pricing.html
@@ -30,7 +30,14 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Atlas <span>  Africa</span> Car</a>
+				<a class="navbar-brand d-flex align-items-center" href="index.html">
+					<img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo navbar-logo mr-2">
+					<span class="navbar-brand">
+						<span class="brand-black">Atlas</span>
+						<span class="brand-accent">Africa</span>
+						<span class="brand-black">Car</span>
+					</span>
+				</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -41,7 +48,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">À propos</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
-	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicule</a></li>
+	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
@@ -378,7 +385,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Atlas <span>  Africa</span> Car</a></h2>
+			  <h2 class="ftco-heading-2"><a href="#" class="logo"><img src="images/logo1_gris.png" alt="Atlas Africa Car" class="footer-logo mr-2"> Atlas <span>  Africa</span> Car</a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
