--- a/about.html
+++ b/about.html
@@ -31,7 +31,14 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Atlas <span> Africa</span> Car</a>
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+          <img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo navbar-logo mr-2">
+          <span class="navbar-brand">
+            <span class="brand-black">Atlas</span>
+            <span class="brand-accent">Africa</span>
+            <span class="brand-black">Car</span>
+          </span>
+        </a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -39,11 +46,12 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
-<li class="nav-item"><a href="about.html" class="nav-link">À propos</a></li>
-<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-<li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
-<li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
-<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">À Propos</a></li>
+	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
+	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
+	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
