--- a/blog-single.html
+++ b/blog-single.html
@@ -30,7 +30,14 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Car<span>Book</span></a>
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+          <img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo navbar-logo mr-2">
+          <span class="navbar-brand">
+            <span class="brand-black">Atlas</span>
+            <span class="brand-accent">Africa</span>
+            <span class="brand-black">Car</span>
+          </span>
+        </a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -301,7 +308,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>book</span></a></h2>
+              <h2 class="ftco-heading-2"><a href="#" class="logo"><img src="images/logo1_gris.png" alt="Atlas Africa Car" class="footer-logo mr-2"> Atlas <span>Africa</span> Car</a></h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
