Changed logo and banner

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo navbar-logo  mr-2">
+            
             <span class="navbar-brand">
               <span class="brand-black">Atlas</span>
               <span class="brand-accent">Africa</span>
@@ -46,10 +46,10 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Accueil</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">À propos</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">À Propos</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
-	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicule</a></li>
+	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
@@ -412,7 +412,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2"><a href="#" class="logo">
-                <img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo footer-logo">
+                <img src="images/logo_black.PNG" alt="Atlas Africa Car" class="site-logo footer-logo">
               </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
