--- a/car.html
+++ b/car.html
@@ -31,11 +31,12 @@
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 				<a class="navbar-brand d-flex align-items-center" href="index.html">
-					<img src="images/logo1_gris.png" alt="Atlas Africa Car" class="site-logo navbar-logo mr-2">
+					
 					<span class="navbar-brand">
 						<span class="brand-black">Atlas</span>
 						<span class="brand-accent">Africa</span>
 						<span class="brand-black">Car</span>
+						<span class="brand-accent">Service</span>
 					</span>
 				</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +46,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link"> À propos</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link"> À Propos</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
 	          <li class="nav-item active"><a href="car.html" class="nav-link">Véhicules</a></li>
@@ -269,7 +270,9 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Atlas <span>  Africa</span> Car</a></h2>
+              <h2 class="ftco-heading-2"><a href="#" class="logo">
+                <img src="images/logo_black.PNG" alt="Atlas Africa Car" class="site-logo footer-logo">
+              </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
