--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap  js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -71,7 +71,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-about">
+    <section class="ftco-section bg-black ftco-about">
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
@@ -79,11 +79,11 @@
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
-	            <h2 class="mb-4">Welcome to Atlas Africa Car</h2>
+	            <h2 class="mb-4">Bienvenue à Atlas Africa Car</h2>
 
 	            <p>Atlas Africa Car est une agence de location de voitures basée à Casablanca, spécialisée dans la mobilité au Maroc. Nous proposons une large gamme de véhicules récents et bien entretenus, adaptés à tous vos besoins : affaires, tourisme, transferts aéroport, ou événements spéciaux. Notre équipe locale vous accompagne avec un service personnalisé, des tarifs transparents et une assistance 24/7 pour garantir votre confort et votre sécurité sur la route.</p>
               <p>Que vous soyez résident ou visiteur, profitez de notre expertise et de notre engagement pour rendre votre expérience de location simple, rapide et agréable. Découvrez le Maroc en toute liberté avec Atlas Africa Car.</p>
-	            <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
+<p><a href="#" class="btn btn-secondary py-3 px-4">Voir nos véhicules</a></p>
 	          </div>
 					</div>
 				</div>
@@ -92,8 +92,7 @@
 
 
 
-
-    <section class="ftco-section testimony-section bg-light">
+    <section class="ftco-section testimony-section bg-black">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -103,7 +102,7 @@
         </div>
         <div class="row ftco-animate">
           <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
+            <div class="carousel-testimony bg-primary owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
                   <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
@@ -165,35 +164,35 @@
       </div>
     </section>
 
-    <section class="ftco-counter ftco-section img" id="section-counter">
+    <section class="ftco-counter bg-black ftco-section img " id="section-counter">
 			<div class="overlay"></div>
     	<div class="container">
     		<div class="row">
-          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
+          <div class="col-md-6 col-lg-3  justify-content-center counter-wrap bg-primary ftco-animate">
+            <div class="block-18 ">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="60">0</strong>
-                <span>Year <br>Experienced</span>
+                <strong class="number" data-number="2">0</strong>
+                <span>Années <br>d'Expérience</span>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap bg-primary ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
                 <strong class="number" data-number="1090">0</strong>
-                <span>Total <br>Cars</span>
+                <span>Véhicules <br>Dispo</span>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap bg-primary ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
                 <strong class="number" data-number="2590">0</strong>
-                <span>Happy <br>Customers</span>
+                <span>Clients <br>Satisfaits</span>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
+          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap bg-primary ftco-animate">
             <div class="block-18">
               <div class="text d-flex align-items-center">
                 <strong class="number" data-number="67">0</strong>
