--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -70,7 +70,7 @@
       </div>
     </section>
 
-    <section class="ftco-section">
+    <section class="bg-black ftco-section">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-md-12 text-center d-flex ftco-animate">
@@ -85,7 +85,7 @@
                 </div>
                 <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                <p><a href="blog-single.html" class="btn btn-primary ">Continue <span class="icon-long-arrow-right"></span></a></p>
               </div>
             </div>
           </div>
