--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap  js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -75,39 +75,40 @@
       </div>
     </section>
 
-    <section class="ftco-section contact-section">
+    <section class="ftco-section bg-black contact-section">
       <div class="container">
-        <div class="row d-flex mb-5 contact-info">
+        <div class="row d-flex mb-5 bg-black contact-info">
         	<div class="col-md-4">
-        		<div class="row mb-5">
-		          <div class="col-md-12">
-		          	<div class="border w-100 p-4 rounded mb-2 d-flex">
+        		<div class="row mb-5 bg-black">
+		          <div class="col-md-12 ">
+		          	<div class="border w-100 bg-primary brand-accent p-4 rounded mb-2 d-flex">
 			          	<div class="icon mr-3">
-			          		<span class="icon-map-o"></span>
+			          		<span class="icon-map-o brand-black"></span>
 			          	</div>
-			            <p><span>Address:</span>	22 Rue d'Anfa, Casablanca 20000, Maroc</p>
+			            <p>
+                    <span class="brand-black">Address:</span>	22 Rue d'Anfa, Casablanca 20000, Maroc</p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
-		          	<div class="border w-100 p-4 rounded mb-2 d-flex">
+		          	<div class="border w-100 p-4 bg-primary rounded mb-2 d-flex">
 			          	<div class="icon mr-3">
-			          		<span class="icon-mobile-phone"></span>
+			          		<span class="icon-mobile-phone brand-black"></span>
 			          	</div>
-			            <p><span>Phone:</span> <a href="tel://0708765015">+ 212 708765015</a></p>
+			            <p><span class="brand-black">Phone:</span> <a href="tel://0708765015">+ 212 708765015</a></p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
-		          	<div class="border w-100 p-4 rounded mb-2 d-flex">
+		          	<div class="border w-100 p-4 bg-primary rounded mb-2 d-flex">
 			          	<div class="icon mr-3">
-			          		<span class="icon-envelope-o"></span>
+			          		<span class="icon-envelope-o brand-black"></span>
 			          	</div>
-			            <p><span>Email:</span> <a href="mailto:info@yoursite.com">contact@atlasafricacar.ma</a></p>
+			            <p><span class="brand-black">Email:</span> <a href="mailto:info@yoursite.com">contact@atlasafricacar.ma</a></p>
 			          </div>
 		          </div>
 		        </div>
           </div>
           <div class="col-md-8 block-9 mb-md-5">
-            <form action="#" class="bg-light p-5 contact-form">
+            <form action="#" class="bg-primary p-5 contact-form">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
@@ -121,7 +122,7 @@
                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                <input type="submit" value="Send Message" class="btn btn-secondary py-3 px-5">
               </div>
             </form>
           
