--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap  js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -69,48 +69,47 @@
         </div>
       </div>
     </section>
-
-		<section class="ftco-section">
+		<section class="ftco-section bg-black
 			<div class="container">
 				<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Services</span>
-            <h2 class="mb-3">Nos Services</h2>
+            <h2 class="subheading">Nos Services</h2>
           </div>
         </div>
 				<div class="row">
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-wedding-car"></span></div>
+            	<div class="icon d-flex bg-primary align-items-center justify-content-center"><span class="flaticon-wedding-car"></span></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Cérémonie de mariage</h3>
+                <h3 class="heading bg-primary mb-2">Cérémonie de mariage</h3>
                 <p>Profitez de nos voitures élégantes pour rendre votre cérémonie de mariage inoubliable au Maroc.</p>
               </div>
             </div>
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
+            	<div class="icon d-flex bg-primary align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Transfert ville</h3>
+                <h3 class="heading bg-primary mb-2">Transfert ville</h3>
                 <p>Transferts rapides et confortables entre les principales villes marocaines, adaptés à vos besoins.</p>
               </div>
             </div>
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-car"></span></div>
+            	<div class="icon d-flex bg-primary align-items-center justify-content-center"><span class="flaticon-car"></span></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Transfert aéroport</h3>
+                <h3 class="heading bg-primary mb-2">Transfert aéroport</h3>
                 <p>Service de navette vers et depuis tous les aéroports du Maroc, pour un voyage sans stress.</p>
               </div>
             </div>
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
+            	<div class="icon d-flex bg-primary align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Tour de ville</h3>
+                <h3 class="heading bg-primary mb-2">Tour de ville</h3>
                 <p>Découvrez Casablanca et les autres villes marocaines avec nos circuits personnalisés en voiture.</p>
               </div>
             </div>
@@ -118,17 +117,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="ftco-section ftco-intro" style="background-image: url(images/bg_3.jpg);">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row justify-content-end">
-					<div class="col-md-6 heading-section heading-section-white ftco-animate">
-            <h2 class="mb-3">Do You Want To Earn With Us? So Don't Be Late.</h2>
-            <a href="#" class="btn btn-primary btn-lg">Become A Driver</a>
-          </div>
-				</div>
-			</div>
-		</section>
+
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
