Added car catalog , automatic mailing, car singles pages.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
 	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -162,13 +161,12 @@
     				<div class="carousel-car owl-carousel">
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-1.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/mercedes-cla-2025.jpg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Mercedes CLA 2025</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">500 Mad<span>/day</span></p>
+			    						<span class="cat">Mercedes</span>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -176,13 +174,12 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-2.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/mercedes-c-2025.PNG);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Mercedes Classe C 2025</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">500 Mad <span>/day</span></p>
+			    						<span class="cat">Mercedes</span>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -190,13 +187,12 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-3.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/merceder-classe-e.jpg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Grand Sedan</a></h2>
+		    						<h2 class="mb-0"><a href="#">Mercedes Classe E 2025</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Cheverolet</span>
-			    						<p class="price ml-auto">500 Mad <span>/day</span></p>
+			    						<span class="cat">Mercedes</span>
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -234,7 +230,7 @@
 
 	            <p>Atlas Africa Car est une agence de location de voitures basée à Casablanca, spécialisée dans la mobilité au Maroc. Nous proposons une large gamme de véhicules récents et bien entretenus, adaptés à tous vos besoins : affaires, tourisme, transferts aéroport, ou événements spéciaux. Notre équipe locale vous accompagne avec un service personnalisé, des tarifs transparents et une assistance 24/7 pour garantir votre confort et votre sécurité sur la route.</p>
               <p>Que vous soyez résident ou visiteur, profitez de notre expertise et de notre engagement pour rendre votre expérience de location simple, rapide et agréable. Découvrez le Maroc en toute liberté avec Atlas Africa Car.</p>
-<p><a href="#" class="btn btn-secondary py-3 px-4">Voir nos véhicules</a></p>
+<p><a href="car.html" class="btn btn-secondary py-3 px-4">Voir nos véhicules</a></p>
 	          </div>
 					</div>
 				</div>
