--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,6 @@
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
 	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -102,29 +101,29 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-envelope-o brand-black"></span>
 			          	</div>
-			            <p><span class="brand-black">Email:</span> <a href="mailto:info@yoursite.com">contact@atlasafricacar.ma</a></p>
+			            <p><span class="brand-black">Email:</span> <a href="mailto:contact@atlasafricacar.ma">contact@atlasafricacar.ma</a></p>
 			          </div>
 		          </div>
 		        </div>
           </div>
           <div class="col-md-8 block-9 mb-md-5">
-            <form action="#" class="bg-primary p-5 contact-form">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
-              </div>
-              <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-secondary py-3 px-5">
-              </div>
-            </form>
+            <form id="contactForm" class="bg-primary p-5 contact-form">
+  <div class="form-group">
+    <input id="name" name="name" type="text" class="form-control" placeholder="Your Name" required autocomplete="name">
+  </div>
+  <div class="form-group">
+    <input id="email" name="email" type="email" class="form-control" placeholder="Your Email" required autocomplete="email">
+  </div>
+  <div class="form-group">
+    <input id="subject" name="subject" type="text" class="form-control" placeholder="Subject">
+  </div>
+  <div class="form-group">
+    <textarea id="message" name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-secondary py-3 px-5">Send Message</button>
+  </div>
+</form>
           
           </div>
         </div>
@@ -219,6 +218,54 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
-    
+  <script src="js/main.js"></script>
+  <script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const form = document.getElementById('contactForm');
+    if (!form) return;
+
+    const TO_EMAIL = 'contact@atlasafricacar.ma'; // The address that will receive the email
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      // Show the browser's built-in validation messages (for required + email format)
+      if (form.reportValidity && !form.reportValidity()) {
+        return;
+      }
+
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const subjectInput = document.getElementById('subject').value.trim();
+      const message = document.getElementById('message').value.trim();
+
+      const subject = subjectInput || 'Nouveau message depuis le site';
+
+      const body = [
+        `Nom: ${name}`,
+        `Email: ${email}`,
+        `Sujet: ${subject}`,
+        '',
+        'Message:',
+        message,
+        '',
+        '—',
+        'Envoyé depuis le formulaire de contact du site Atlas Africa Car'
+      ].join('\n');
+
+      // Build the mailto link with subject, cc and body
+      const mailto = `mailto:${TO_EMAIL}` +
+                     `?subject=${encodeURIComponent(subject)}` +
+                     `&cc=${encodeURIComponent(email)}` +
+                     `&body=${encodeURIComponent(body)}`;
+
+      // Open the user's email app with the message prefilled
+      window.location.href = mailto;
+
+      // Clear the form
+      form.reset();
+    });
+  });
+</script>
   </body>
 </html>
