--- a/car.html
+++ b/car.html
@@ -75,12 +75,13 @@
     		<div class="row">
 				<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/macan.jpg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/Macan-2025.jpeg);">
     					</div>
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single-macan.html">Porshe Macan</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Porshe</span>
+								<p class="price ml-auto">1700 Mad <span>/day</span></p>
 	    						
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-macan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
@@ -95,6 +96,7 @@
     						<h2 class="mb-0"><a href="car-single-cla.html">Mercedes CLA 2025</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Mercedes</span>
+								<p class="price ml-auto">1200 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-cla.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -103,12 +105,13 @@
 				
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/mercedes-c-2025.PNG);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/classeCù.jpg);">
     					</div>
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single-c.html">Mercedes Classe C 2025</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Mercedes</span>
+								<p class="price ml-auto">1400 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-c.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -116,12 +119,13 @@
     			</div>
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/merceder-classe-e.jpg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/classeE.jpg);">
     					</div>
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single-e.html">Mercedes Classe E 2025</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Mercedes</span>
+								<p class="price ml-auto">1500 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-e.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -137,6 +141,7 @@
     						<h2 class="mb-0"><a href="car-single-evoque-r.html">Range Rover Evoque R</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Land Rover</span>
+								<p class="price ml-auto">900 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-evoque-r.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -150,6 +155,7 @@
     						<h2 class="mb-0"><a href="car-single-evoque.html">Range Rover Evoque</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Land Rover</span>
+								<p class="price ml-auto">4000 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-evoque.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -164,6 +170,7 @@
     						<h2 class="mb-0"><a href="car-single-sport.html">Range Rover Sport</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Land Rover</span>
+								<p class="price ml-auto">2500 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-sport.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -177,6 +184,7 @@
     						<h2 class="mb-0"><a href="car-single-touareg.html">Touareg</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Volkswagen</span>
+								<p class="price ml-auto">800 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-touareg.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -190,6 +198,7 @@
     						<h2 class="mb-0"><a href="car-single-tucson.html">Tucson</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Hyundai</span>
+								<p class="price ml-auto">450 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-tucson.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -204,6 +213,7 @@
     						<h2 class="mb-0"><a href="car-single-sportage.html">Sportage</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Kia</span>
+								<p class="price ml-auto">450 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-sportage.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -217,6 +227,7 @@
     						<h2 class="mb-0"><a href="car-single-creta.html">Creta</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Hyundai</span>
+								<p class="price ml-auto">350 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-creta.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -230,6 +241,7 @@
     						<h2 class="mb-0"><a href="car-single-arkana.html">Arkana</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Renault</span>
+								<p class="price ml-auto">500 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-arkana.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -243,6 +255,7 @@
     						<h2 class="mb-0"><a href="car-single-elantra.html">Elantra</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Hyundai</span>
+								<p class="price ml-auto">400 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-elantra.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -256,6 +269,7 @@
     						<h2 class="mb-0"><a href="car-single-staria.html">Staria 9 places</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Hyundai</span>
+								<p class="price ml-auto">900 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-staria.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -269,6 +283,7 @@
     						<h2 class="mb-0"><a href="car-single-accent.html">Accent</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Hyundai</span>
+								<p class="price ml-auto">300 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-accent.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -282,6 +297,7 @@
     						<h2 class="mb-0"><a href="car-single-clio5.html">Clio 5</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Renault</span>
+								<p class="price ml-auto">300 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-clio5.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
@@ -295,6 +311,7 @@
     						<h2 class="mb-0"><a href="car-single-logan.html">Logan</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Dacia</span>
+								<p class="price ml-auto">250 Mad <span>/day</span></p>
     						</div>
     						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-logan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
