--- a/contact.html
+++ b/contact.html
@@ -109,13 +109,19 @@
           <div class="col-md-8 block-9 mb-md-5">
             <form id="contactForm" class="bg-primary p-5 contact-form">
   <div class="form-group">
-    <input id="name" name="name" type="text" class="form-control" placeholder="Your Name" required autocomplete="name">
+    <input id="name" name="name" type="text" class="form-control" placeholder="Nom et Prénom" required autocomplete="name">
   </div>
   <div class="form-group">
-    <input id="email" name="email" type="email" class="form-control" placeholder="Your Email" required autocomplete="email">
+    <input id="email" name="email" type="email" class="form-control" placeholder="Email" required autocomplete="email">
   </div>
   <div class="form-group">
-    <input id="subject" name="subject" type="text" class="form-control" placeholder="Subject">
+    <input id="Téléphone" name="Téléphone" type="Téléphone" class="form-control" placeholder="Téléphone" required autocomplete="email">
+  </div>
+  <div class="form-group">
+    <input id="subject" name="subject" type="text" class="form-control" placeholder="Voiture Désirée" required> 
+  </div>
+  <div class="form-group">
+    <input id="date" name="date" type="text" class="form-control" placeholder="Date Désirée" required>
   </div>
   <div class="form-group">
     <textarea id="message" name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
