--- a/about.html
+++ b/about.html
@@ -49,7 +49,6 @@
 	          <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">À Propos</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Tarifs</a></li>
 	          <li class="nav-item"><a href="car.html" class="nav-link">Véhicules</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
@@ -64,7 +63,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
           <div class="col-md-9 ftco-animate pb-5">
           	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">About Us</h1>
+            <h1 class=>About Us</h1>
           </div>
         </div>
       </div>
