chaged some pics and updated car info

--- a/car-single-accent.html
+++ b/car-single-accent.html
@@ -106,7 +106,7 @@
 	              	<div class="text">
 		                <h3 class="heading mb-0 pl-3">
 		                	Transmission
-		                	<span>Manual</span>
+		                	<span>Automatic</span>
 		                </h3>
 	                </div>
                 </div>
@@ -151,7 +151,7 @@
 	              	<div class="text">
 		                <h3 class="heading mb-0 pl-3">
 		                	Fuel
-		                	<span>Petrol</span>
+		                	<span>Essence</span>
 		                </h3>
 	                </div>
                 </div>
