--- a/car-single-logan.html
+++ b/car-single-logan.html
@@ -151,7 +151,7 @@
 	              	<div class="text">
 		                <h3 class="heading mb-0 pl-3">
 		                	Fuel
-		                	<span>Petrol</span>
+		                	<span>Diesel</span>
 		                </h3>
 	                </div>
                 </div>
