--- a/car-single-macan.html
+++ b/car-single-macan.html
@@ -107,7 +107,7 @@
 	              	<div class="text">
 		                <h3 class="heading mb-0 pl-3">
 		                	Transmission
-		                	<span>Manual</span>
+		                	<span>Automatic</span>
 		                </h3>
 	                </div>
                 </div>
@@ -152,7 +152,7 @@
 	              	<div class="text">
 		                <h3 class="heading mb-0 pl-3">
 		                	Fuel
-		                	<span>Petrol</span>
+		                	<span>Essence</span>
 		                </h3>
 	                </div>
                 </div>
