--- a/car.html
+++ b/car.html
@@ -148,10 +148,10 @@
     			</div>
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/evoque.jpg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/vogue.PNG);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single-evoque.html">Range Rover Evoque</a></h2>
+    						<h2 class="mb-0"><a href="car-single-evoque.html">Range Rover Vogue</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Land Rover</span>
 								<p class="price ml-auto">4000 Mad <span>/day</span></p>
