updated the vogue

--- a/car.html
+++ b/car.html
@@ -151,7 +151,7 @@
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/vogue.PNG);">
     					</div>
     					<div class="text">
-    						<h2 class="mb-0"><a href="car-single-evoque.html">Range Rover Vogue</a></h2>
+    						<h2 class="mb-0"><a href="car-single-vogue.html">Range Rover Vogue</a></h2>
     						<div class="d-flex mb-3">
 	    						<span class="cat">Land Rover</span>
 								<p class="price ml-auto">4000 Mad <span>/day</span></p>
