fixed some references

--- a/car.html
+++ b/car.html
@@ -83,7 +83,7 @@
 								<p class="price ml-auto">1700 Mad <span>/day</span></p>
 	    						
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-macan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-macan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -97,7 +97,7 @@
 	    						<span class="cat">Mercedes</span>
 								<p class="price ml-auto">1200 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-cla.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-cla.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -112,7 +112,7 @@
 	    						<span class="cat">Mercedes</span>
 								<p class="price ml-auto">1400 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-c.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-c.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -126,7 +126,7 @@
 	    						<span class="cat">Mercedes</span>
 								<p class="price ml-auto">1500 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-e.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-e.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -142,7 +142,7 @@
 	    						<span class="cat">Land Rover</span>
 								<p class="price ml-auto">900 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-evoque-r.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-evoque-r.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -156,7 +156,7 @@
 	    						<span class="cat">Land Rover</span>
 								<p class="price ml-auto">4000 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-evoque.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-vogue.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -171,7 +171,7 @@
 	    						<span class="cat">Land Rover</span>
 								<p class="price ml-auto">2500 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-sport.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-sport.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -185,7 +185,7 @@
 	    						<span class="cat">Volkswagen</span>
 								<p class="price ml-auto">800 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-touareg.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-touareg.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -199,7 +199,7 @@
 	    						<span class="cat">Hyundai</span>
 								<p class="price ml-auto">450 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-tucson.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-tucson.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -214,7 +214,7 @@
 	    						<span class="cat">Kia</span>
 								<p class="price ml-auto">450 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-sportage.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-sportage.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -228,7 +228,7 @@
 	    						<span class="cat">Hyundai</span>
 								<p class="price ml-auto">350 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-creta.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-creta.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -242,7 +242,7 @@
 	    						<span class="cat">Renault</span>
 								<p class="price ml-auto">500 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-arkana.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-arkana.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -256,7 +256,7 @@
 	    						<span class="cat">Hyundai</span>
 								<p class="price ml-auto">400 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-elantra.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-elantra.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -270,7 +270,7 @@
 	    						<span class="cat">Hyundai</span>
 								<p class="price ml-auto">900 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-staria.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-staria.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -284,7 +284,7 @@
 	    						<span class="cat">Hyundai</span>
 								<p class="price ml-auto">300 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-accent.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-accent.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -298,7 +298,7 @@
 	    						<span class="cat">Renault</span>
 								<p class="price ml-auto">300 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-clio5.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-clio5.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -312,7 +312,7 @@
 	    						<span class="cat">Dacia</span>
 								<p class="price ml-auto">250 Mad <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-logan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-logan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
