--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
     				<div class="carousel-car owl-carousel">
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/mercedes-cla-2025.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/Macan-2025.jpeg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes CLA 2025</a></h2>
+		    						<h2 class="mb-0"><a href="car.html">Porshe Macan 2025</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">Mercedes</span>
+			    						<span class="cat">Porshe</span>
 		    						</div>
-		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
+		    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-macan.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
 		    				</div>
     					</div>
@@ -176,11 +176,11 @@
 		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/mercedes-c-2025.PNG);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Classe C 2025</a></h2>
+		    						<h2 class="mb-0"><a href="car.html"> Classe C 2025</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Mercedes</span>
 		    						</div>
-		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
+		    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-c.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
 		    				</div>
     					</div>
@@ -189,25 +189,26 @@
 		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/merceder-classe-e.jpg);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Mercedes Classe E 2025</a></h2>
+		    						<h2 class="mb-0"><a href="car.html"> Classe E 2025</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Mercedes</span>
 		    						</div>
-		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
+		    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-e.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
 		    				</div>
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/evoque.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/vogue.PNG);">
 		    					</div>
 		    					<div class="text">
-		    						<h2 class="mb-0"><a href="#">Range Rover Evoque</a></h2>
+		    						<h2 class="mb-0"><a href="car.html">Range Rover Vogue</a></h2>
 		    						<div class="d-flex mb-3">
 			    						<span class="cat">Land Rover</span>
 		    						</div>
-		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
+		    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-vogue.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
+                  
 		    				</div>
     					</div>
     				</div>
