--- a/car-single-macan.html
+++ b/car-single-macan.html
@@ -75,7 +75,7 @@
       	<div class="row justify-content-center">
       		<div class="col-md-12">
       			<div class="car-details">
-      				<div class="img rounded" style="background-image: url(images/car_catalog/macan.jpg);"></div>
+      				<div class="img rounded" style="background-image: url(images/car_catalog/Macan-2025.jpeg);"></div>
       				<div class="text text-center">
       					<span class="subheading">Porshe</span>
       					<h2> Macan</h2>
