Updated some pics

--- a/car-single-c.html
+++ b/car-single-c.html
@@ -74,7 +74,7 @@
       	<div class="row justify-content-center">
       		<div class="col-md-12">
       			<div class="car-details">
-      				<div class="img rounded" style="background-image: url(images/car_catalog/mercedes-c-2025.PNG);"></div>
+      				<div class="img rounded" style="background-image: url(images/car_catalog/classeCù.jpg);"></div>
       				<div class="text text-center">
       					<span class="subheading">Mercedes</span>
       					<h2> Classe C</h2>
