--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/mercedes-c-2025.PNG);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/classeCù.jpg);">
 		    					</div>
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="car.html"> Classe C 2025</a></h2>
@@ -186,7 +186,7 @@
     					</div>
     					<div class="item">
     						<div class="car-wrap rounded ftco-animate">
-		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/merceder-classe-e.jpg);">
+		    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/classeE.jpg);">
 		    					</div>
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="car.html"> Classe E 2025</a></h2>
